# racing-drone-simulation

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/drone_sim/: controls.py  dmx.py  main.py  models.py  physics.py  rendering.py  ui.py
