[project]
name = "racing-drone-simulation"
version = "0.1.0"
description = "Racing drone simulator with sACN DMX output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "sacn>=1.9.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drone_sim"]

[project.scripts]
drone-sim = "drone_sim.main:main"
